--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,29 @@ apscheduler>=3.10.4
 jinja2>=3.1.2
 httpx>=0.25.0
 cachetools>=5.3.0
+
+# Data Science Dependencies (for advanced analytics)
+numpy>=1.24.0
+scipy>=1.11.0
+
+# Testing Dependencies
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+pytest-mock>=3.11.0
+
+# Development Dependencies
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.5.0
+isort>=5.12.0
+
+# Security Dependencies
+safety>=2.3.0
+bandit>=1.7.0
+
+# Performance Testing
+locust>=2.17.0
+
+# Production Dependencies
+gunicorn>=21.2.0
