--- a/env.template
+++ b/env.template
@@ -26,8 +26,11 @@ GOOGLE_API_KEY=your-google-api-key
 # Redis Configuration (Optional)
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=your-secure-redis-password
 REDIS_DB=0
+
+# Grafana Configuration
+GRAFANA_ADMIN_PASSWORD=your-secure-grafana-password
 
 # Optional: Override default settings
 # DEFAULT_TEMPERATURE=0.6
