Major project restructuring and deployment fixes - Reorganized directory structure with src/, config/, scripts/, docs/ - Added .dockerignore to optimize builds - Updated .gitignore for data/cache directories - Fixed Docker deployment mounting issues - Added health-check and install-config scripts

--- a/.gitignore
+++ b/.gitignore
@@ -134,8 +134,12 @@ redis-data/
 prometheus-data/
 grafana-data/
 
+# Data directories (restructured)
+data/
+config/docker/data/
+
 # Docker
-.dockerignore
+docker-compose.override.yml.bak
 
 # Temporary files
 *.tmp
@@ -153,6 +157,13 @@ ssl/
 *.pem
 *.key
 *.crt
+
+# Machine learning cache
+.cache/
+*.model
+*.pkl
+transformers_cache/
+sentence_transformers_cache/
 
 # Performance test results
 *.html
