--- a/config/docker/docker-compose.override.yml
+++ b/config/docker/docker-compose.override.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   redis:
     volumes:
@@ -8,15 +6,15 @@ services:
   api:
     volumes:
       - ./data/logs:/app/logs
-      - ./.env:/app/.env:ro
+      - ../../.env:/app/.env:ro
       
   dashboard:
     volumes:
-      - ./.env:/app/.env:ro
+      - ../../.env:/app/.env:ro  # TODO need to move .env to config/docker/
       
   prometheus:
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ../monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - ./data/prometheus:/prometheus
       
   grafana:
