--- a/config/docker/docker-compose.yml
+++ b/config/docker/docker-compose.yml
@@ -8,7 +8,13 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-}
+    command: >
+      sh -c '
+      if [ -n "$REDIS_PASSWORD" ]; then
+        redis-server --appendonly yes --requirepass "$REDIS_PASSWORD"
+      else
+        redis-server --appendonly yes
+      fi'
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 30s
@@ -73,7 +79,8 @@ services:
       - "443:443"
     volumes:
       - ../nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ../../ssl:/etc/nginx/ssl:ro
+      - ../nginx/ssl:/etc/nginx/ssl:ro
+      - /var/www/letsencrypt:/var/www/letsencrypt:ro
     depends_on:
       - api
       - dashboard
@@ -85,12 +92,14 @@ services:
     restart: unless-stopped
     ports:
       - "9090:9090"
+    user: "65534:65534"  # nobody:nobody
     volumes:
       - ../monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - prometheus_data:/prometheus
+      - ../../data/prometheus:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
+      - '--web.enable-admin-api'
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
 
@@ -101,10 +110,11 @@ services:
     restart: unless-stopped
     ports:
       - "3000:3000"
+    user: "472:472"  # grafana:grafana
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin123}
     volumes:
-      - grafana_data:/var/lib/grafana
+      - ../../data/grafana:/var/lib/grafana
       - ../monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards:ro
       - ../monitoring/grafana/datasources:/etc/grafana/provisioning/datasources:ro
     depends_on:
@@ -112,10 +122,6 @@ services:
 
 volumes:
   redis_data:
-    driver: local
-  prometheus_data:
-    driver: local
-  grafana_data:
     driver: local
 
 networks:
