--- a/config/monitoring/prometheus.yml
+++ b/config/monitoring/prometheus.yml
@@ -1,6 +1,7 @@
 global:
   scrape_interval: 15s
   evaluation_interval: 15s
+  scrape_timeout: 10s
 
 rule_files:
   # - "first_rules.yml"
@@ -11,10 +12,10 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'consensus-api'
+  - job_name: 'consensus_api'
+    metrics_path: '/metrics'
     static_configs:
       - targets: ['api:8000']
-    metrics_path: '/metrics'
     scrape_interval: 30s
 
   - job_name: 'consensus-dashboard'
