--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ aiohttp>=3.8.0
 python-multipart>=0.0.6
 streamlit>=1.28.0
 python-dotenv>=1.0.0
+PyYAML>=6.0.0
 
 # Advanced Features Dependencies
 redis>=5.0.0
+redis[hiredis]>=5.0.0  # High-performance Redis client
 slowapi>=0.1.9
 websockets>=11.0.0
 cohere>=4.37.0
@@ -28,6 +30,13 @@ apscheduler>=3.10.4
 jinja2>=3.1.2
 httpx>=0.25.0
 cachetools>=5.3.0
+
+# Performance Optimization Dependencies
+asyncio-throttle>=1.0.2  # Rate limiting for async operations
+aiocache>=0.12.2  # Advanced async caching
+aioredis>=2.0.1  # Async Redis client (alternative)
+orjson>=3.9.0  # Fast JSON serialization
+uvloop>=0.19.0  # High-performance event loop (Unix only)
 
 # Data Science Dependencies (for advanced analytics)
 numpy>=1.24.0
